Parameterised remaining image references to support s3 image hosting.

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@ location: contact
 
 
 <div class="section">
-    <img class="left" src="http://felicitywestmacott.co.uk/graphics/house.jpg" alt="" />
+    <img class="left" src="{{ site.baseimageref }}graphics/house.jpg" alt="" />
     <div class="sectiontext">
         <h3>Contact Me</h3>
         <p>I work from my studio at home. Please feel free to contact me
