--- a/ordering.html
+++ b/ordering.html
@@ -8,7 +8,7 @@ location: ordering
 <h1>Frequently Asked Questions</h1>
 
 <div class="section">
-    <img class="left" src="http://felicitywestmacott.co.uk/graphics/pic5.jpg" />
+    <img class="left" src="{{ site.baseimageref }}graphics/pic5.jpg" />
     <div class="sectiontext">
         <h3>Are you available to make my dress?</h3>
         <p>
@@ -23,7 +23,7 @@ location: ordering
 </div>
 
 <div class="section">
-    <img class="right" src="http://felicitywestmacott.co.uk/graphics/pic1.jpg" />
+    <img class="right" src="{{ site.baseimageref }}graphics/pic1.jpg" />
     <div class="sectiontext">
         <h3>How does my dress get designed and made?</h3>
         <p>
@@ -54,7 +54,7 @@ location: ordering
 </div>
 
 <div class="section">
-    <img class="left" src="http://felicitywestmacott.co.uk/graphics/pic2.jpg" />
+    <img class="left" src="{{ site.baseimageref }}graphics/pic2.jpg" />
     <div class="sectiontext">
         <h3>How long does it take? Can you accommodate rush orders?</h3>
         <p>
@@ -76,7 +76,7 @@ location: ordering
 </div>
 
 <div class="section">
-    <img class="right" src="http://felicitywestmacott.co.uk/graphics/pic3.jpg" />
+    <img class="right" src="{{ site.baseimageref }}graphics/pic3.jpg" />
     <div class="sectiontext">
         <h3>How much will it cost?</h3>
         <p>
@@ -156,7 +156,7 @@ location: ordering
 </div>
 
 <div class="section">
-    <img class="left" src="http://felicitywestmacott.co.uk/graphics/pic4.jpg" />
+    <img class="left" src="{{ site.baseimageref }}graphics/pic4.jpg" />
     <div class="sectiontext">
         <h3>Do you take alterations?</h3>
         <p>
@@ -185,7 +185,7 @@ location: ordering
 </div>
 
 <div class="section">
-    <img class="right" src="http://felicitywestmacott.co.uk/graphics/pic5.jpg" />
+    <img class="right" src="{{ site.baseimageref }}graphics/pic5.jpg" />
     <div class="sectiontext">
         <h3>Do you make copies?</h3>
         <p>
@@ -208,7 +208,7 @@ location: ordering
 </div>
 
 <div class="section">
-    <img class="left" src="http://felicitywestmacott.co.uk/graphics/pic1.jpg" />
+    <img class="left" src="{{ site.baseimageref }}graphics/pic1.jpg" />
     <div class="sectiontext">
         <h3>What if I lose or gain weight?</h3>
         <p>
