--- a/thankyous.html
+++ b/thankyous.html
@@ -8,7 +8,7 @@ location: thanks
 <h1>Thank You Messages</h1>
 
 <div class="section">
-    <img class="left" src="http://felicitywestmacott.co.uk/thankyous/mostert.jpg" alt="" />
+    <img class="left" src="{{ site.baseimageref }}thanks/mostert.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Karen Mostert</h3>
         <p>
@@ -23,7 +23,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/ailsa.jpg" alt="" />
+    <img class="right" src="{{ site.baseimageref }}thanks/ailsa.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress and veil for Ailsa</h3>
         <p>
@@ -45,7 +45,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="left" src="http://felicitywestmacott.co.uk/thankyous/cowell.jpg" alt="" />
+    <img class="left" src="{{ site.baseimageref }}thanks/cowell.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Alison Cowell</h3>
         <p>
@@ -75,7 +75,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/williams.jpg" alt="" />
+    <img class="right" src="{{ site.baseimageref }}thanks/williams.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress and bolero for Laura Williams</h3>
         <p>
@@ -96,7 +96,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="left" src="http://felicitywestmacott.co.uk/thankyous/katie.jpg" alt="" />
+    <img class="left" src="{{ site.baseimageref }}thanks/katie.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Katie Darvall</h3>
         <p>
@@ -118,7 +118,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/singleton.jpg" alt="" />
+    <img class="right" src="{{ site.baseimageref }}thanks/singleton.jpg" alt="" />
     <div class="sectiontext">
         <h3>Jacket for Mother-of-the-Bride Karen Singelton</h3>
         <p>
@@ -137,7 +137,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="left" src="http://felicitywestmacott.co.uk/thankyous/connolly.jpg" alt="" />
+    <img class="left" src="{{ site.baseimageref }}thanks/connolly.jpg" alt="" />
     <div class="sectiontext">
         <h3>Bridesmaids dresses for Charlotte Connolly</h3>
         <p>
@@ -165,7 +165,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/king.jpg" alt="" />
+    <img class="right" src="{{ site.baseimageref }}thanks/king.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Ellie King
         </h3>
@@ -201,7 +201,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="left" src="http://felicitywestmacott.co.uk/thankyous/mei.jpg" alt="" />
+    <img class="left" src="{{ site.baseimageref }}thanks/mei.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Michele Mei
         </h3>
@@ -218,7 +218,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/sophie.jpg" alt="" />
+    <img class="right" src="{{ site.baseimageref }}thanks/sophie.jpg" alt="" />
     <div class="sectiontext">
         <h3>Tiara and alterations for Sophie</h3>
         <p>
@@ -234,7 +234,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="left" src="http://felicitywestmacott.co.uk/thankyous/barker.jpg" alt="" />
+    <img class="left" src="{{ site.baseimageref }}thanks/barker.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Jenna Barker</h3>
         <p>
@@ -251,7 +251,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/phillips.jpg" alt="" />
+    <img class="right" src="{{ site.baseimageref }}thanks/phillips.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress and veil for Rachel Phillips</h3>
         <p>
@@ -266,7 +266,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="left" src="http://felicitywestmacott.co.uk/thankyous/macdonald.jpg" alt="" />
+    <img class="left" src="{{ site.baseimageref }}thanks/macdonald.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding-kayliegh dress for Jacqeline Macdonald</h3>
         <p>
@@ -286,7 +286,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/sanders.jpg" alt="" />
+    <img class="right" src="{{ site.baseimageref }}thanks/sanders.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress and flower hair pin for Jackie Sanders</h3>
         <p>
@@ -309,7 +309,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="left" src="http://felicitywestmacott.co.uk/thankyous/simpson.jpg" alt="" />
+    <img class="left" src="{{ site.baseimageref }}thanks/simpson.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Amy Simpson</h3>
         <p>
@@ -331,7 +331,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/billige.jpg" alt="" />
+    <img class="right" src="{{ site.baseimageref }}thanks/billige.jpg" alt="" />
     <div class="sectiontext">
         <h3>Bridesmaids' dresses for Amanda Billige</h3>
         <p>
@@ -368,7 +368,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="left" src="http://felicitywestmacott.co.uk/thankyous/cook.jpg" alt="" />
+    <img class="left" src="{{ site.baseimageref }}thanks/cook.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress, bridesmaids' dresses, cravats &amp; hankies and
             an evening dress for Marie Cook
@@ -389,7 +389,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/thompson.jpg" alt="" />
+    <img class="right" src="{{ site.baseimageref }}thanks/thompson.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Kelly Thompson</h3>
         <p>
@@ -400,7 +400,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="left" src="http://felicitywestmacott.co.uk/portfolio/images/thursfieldtt.jpg" alt="" />
+    <img class="left" src="{{ site.baseimageref }}images/thursfieldtt.jpg" alt="" />
     <div class="sectiontext">
         <h3>Bridesmaids, tiara and dressing service for Fiona
             Thursfield
@@ -443,7 +443,7 @@ location: thanks
 
 <!--
 	<div class="section">
-		<img class="right" src="http://felicitywestmacott.co.uk/thankyous/bann.jpg" alt="" />
+		<img class="right" src="{{ site.baseimageref }}thanks/bann.jpg" alt="" />
 		<div class="sectiontext">
 			<h3>Wedding dress for Bann Salman</h3>
 			<p>
@@ -459,7 +459,7 @@ location: thanks
 	</div>
  -->
 <div class="section">
-    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/harding.jpg" alt="" />
+    <img class="right" src="{{ site.baseimageref }}thanks/harding.jpg" alt="" />
     <div class="sectiontext">
         <h3>Alterations and Vintage veil restoration for Charlene
             Harding
@@ -480,7 +480,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="left" src="http://felicitywestmacott.co.uk/portfolio/images/crawfordtt.jpg" alt="" />
+    <img class="left" src="{{ site.baseimageref }}images/crawfordtt.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Tracey Crawford</h3>
         <p>
@@ -511,7 +511,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="right" src="http://felicitywestmacott.co.uk/portfolio/images/loneytt.jpg" alt="" />
+    <img class="right" src="{{ site.baseimageref }}images/loneytt.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Hannah Loney</h3>
         <p>
@@ -540,7 +540,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="left" src="http://felicitywestmacott.co.uk/thankyous/timlin.jpg" alt="" />
+    <img class="left" src="{{ site.baseimageref }}thanks/timlin.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress alterations for Anna Timlin</h3>
         <p>
@@ -557,7 +557,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/lester.jpg" alt="" />
+    <img class="right" src="{{ site.baseimageref }}thanks/lester.jpg" alt="" />
     <div class="sectiontext">
         <h3>Dress and Coat for Mother of the Bride, Irene Lester</h3>
         <p>
@@ -574,7 +574,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="left" src="http://felicitywestmacott.co.uk/thankyous/miller.jpg" alt="" />
+    <img class="left" src="{{ site.baseimageref }}thanks/miller.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress and bolero alterations for Debbie Miller</h3>
         <p>
@@ -590,7 +590,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/arisa.jpg" alt="" />
+    <img class="right" src="{{ site.baseimageref }}thanks/arisa.jpg" alt="" />
     <div class="sectiontext">
         <h3>Alterations and hand beading for Arisa Ota</h3>
         <p>
@@ -607,7 +607,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="left" src="http://felicitywestmacott.co.uk/portfolio/images/endersbytt.jpg" alt="" />
+    <img class="left" src="{{ site.baseimageref }}images/endersbytt.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Lou Endersby</h3>
         <p>
@@ -624,7 +624,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/easton.jpg" alt="" />
+    <img class="right" src="{{ site.baseimageref }}thanks/easton.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress, bridesmaids &amp; flowergirl dresses and
             groomsmens ties for Alice Easton
@@ -641,7 +641,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="left" src="http://felicitywestmacott.co.uk/portfolio/images/doanitt.jpg" alt="" />
+    <img class="left" src="{{ site.baseimageref }}images/doanitt.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Thalia Donai</h3>
         <p>
@@ -658,7 +658,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/sherwood.jpg" alt="" />
+    <img class="right" src="{{ site.baseimageref }}thanks/sherwood.jpg" alt="" />
     <div class="sectiontext">
         <h3>Flowegirl dresses, tiara and necklace for Jo Sherwood</h3>
         <p>
@@ -674,7 +674,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="left" src="http://felicitywestmacott.co.uk/thankyous/strong.jpg" alt="" />
+    <img class="left" src="{{ site.baseimageref }}thanks/strong.jpg" alt="" />
     <div class="sectiontext">
         <h3>Tudor Wedding dress for Stella Strong</h3>
         <p>
@@ -689,7 +689,7 @@ location: thanks
 
 <!-- TODO: Add this back when the picture is available... or remove permanently.
 <div class="section">
-    <img class="right" src="http://felicitywestmacott.co.uk/portfolio/images/howardtt.jpg" alt="" />
+    <img class="right" src="{{ site.baseimageref }}images/howardtt.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Kate Tibbles</h3>
         <p>
@@ -712,7 +712,7 @@ location: thanks
 -->
 
 <div class="section">
-    <img class="left" src="http://felicitywestmacott.co.uk/portfolio/images/cherrytt.jpg" alt="" />
+    <img class="left" src="{{ site.baseimageref }}images/cherrytt.jpg" alt="" />
     <div class="sectiontext">
         <h3>Prom dress for Cherry Smith</h3>
         <p>
@@ -732,7 +732,7 @@ location: thanks
 
 <!-- TODO: Add this back when the picture is available... or remove permanently.
 <div class="section">
-    <img class="right" src="http://felicitywestmacott.co.uk/portfolio/images/juliett.jpg" alt="" />
+    <img class="right" src="{{ site.baseimageref }}images/juliett.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Julie Barrell</h3>
         <p>
@@ -753,7 +753,7 @@ location: thanks
 -->
 
 <div class="section">
-    <img class="left" src="http://felicitywestmacott.co.uk/thankyous/neil.jpg" alt="" />
+    <img class="left" src="{{ site.baseimageref }}thanks/neil.jpg" alt="" />
     <div class="sectiontext">
         <h3>Prom dress for Sarah Neil</h3>
         <p>
@@ -774,7 +774,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/howes.jpg" alt="" />
+    <img class="right" src="{{ site.baseimageref }}thanks/howes.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Claire Howes</h3>
         <p>
@@ -788,7 +788,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="left" src="http://felicitywestmacott.co.uk/portfolio/images/sdarvaltt.jpg" alt="" />
+    <img class="left" src="{{ site.baseimageref }}images/sdarvaltt.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Suzanne Darvall</h3>
         <p>
@@ -804,7 +804,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/steph.jpg" alt="" />
+    <img class="right" src="{{ site.baseimageref }}thanks/steph.jpg" alt="" />
     <div class="sectiontext">
         <h3>Necklace, tiara and alterations for Steph Foster</h3>
         <p>
@@ -819,7 +819,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="left" src="http://felicitywestmacott.co.uk/thankyous/zoe.jpg" alt="" />
+    <img class="left" src="{{ site.baseimageref }}thanks/zoe.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Zoe Whittacker</h3>
         <p>
@@ -836,7 +836,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/yarbrudy.jpg" alt="" />
+    <img class="right" src="{{ site.baseimageref }}thanks/yarbrudy.jpg" alt="" />
     <div class="sectiontext">
         <h3>Lace-up back in shop-bought bodice for Gina Yarbrudy</h3>
         <p>
@@ -851,7 +851,7 @@ location: thanks
 </div>
 
 <div class="section">
-    <img class="left" src="http://felicitywestmacott.co.uk/portfolio/images/turnertt.jpg" alt="" />
+    <img class="left" src="{{ site.baseimageref }}images/turnertt.jpg" alt="" />
     <div class="sectiontext">
         <h3>Dress and jacket for Jan Turner</h3>
         <p>
