--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@ location: home
 
 <div style="white-space: nowrap; overflow: hidden;">
     <img style="max-width: 20%;"
-         src="http://felicitywestmacott.co.uk/graphics/pic1b.jpg" /><img style="max-width: 20%;"
-         src="http://felicitywestmacott.co.uk/graphics/pic2b.jpg" /><img style="max-width: 20%;"
-         src="http://felicitywestmacott.co.uk/graphics/pic3b.jpg" /><img style="max-width: 20%;"
-         src="http://felicitywestmacott.co.uk/graphics/pic4b.jpg" /><img style="max-width: 20%;"
-         src="http://felicitywestmacott.co.uk/graphics/pic5b.jpg" />
+         src="{{ site.baseimageref }}graphics/pic1b.jpg" /><img style="max-width: 20%;"
+         src="{{ site.baseimageref }}graphics/pic2b.jpg" /><img style="max-width: 20%;"
+         src="{{ site.baseimageref }}graphics/pic3b.jpg" /><img style="max-width: 20%;"
+         src="{{ site.baseimageref }}graphics/pic4b.jpg" /><img style="max-width: 20%;"
+         src="{{ site.baseimageref }}graphics/pic5b.jpg" />
 </div>
 
 <div>
@@ -49,7 +49,7 @@ location: home
 
 <div class="section">
 
-    <img class="right" src="http://felicitywestmacott.co.uk/graphics/profile.jpg" alt="" />
+    <img class="right" src="{{ site.baseimageref }}graphics/profile.jpg" alt="" />
 
     <div class="sectiontext">
         <h3>About Me</h3>
