Switch sides of a thank you note to fit in with those above and below.

--- a/thankyous.html
+++ b/thankyous.html
@@ -712,7 +712,7 @@ location: thanks
 -->
 
 <div class="section">
-    <img class="left" src="{{ site.baseimageref }}images/cherrytt.jpg" alt="" />
+    <img class="right" src="{{ site.baseimageref }}images/cherrytt.jpg" alt="" />
     <div class="sectiontext">
         <h3>Prom dress for Cherry Smith</h3>
         <p>
