Moving Terms image refs to S3.

--- a/terms.html
+++ b/terms.html
@@ -36,7 +36,7 @@ location: not-linked
 <h3> Payments </h3>
 
 <p>
-    <img src="graphics/chequebook.jpg" align="left" />
+    <img src="{{ site.baseimageref }}graphics/chequebook.jpg" align="left" />
     I accept payment by cheque, by
     direct bank transfer or in cash (by arrangement). You will be invoiced in writing for all monies owing.
     <br />
@@ -158,7 +158,7 @@ location: not-linked
 <br />
 <h3>Timescales and Rush Orders </h3>
 <p>
-    <img src="graphics/calendar.jpg" align="right" />
+    <img src="{{ site.baseimageref }}graphics/calendar.jpg" align="right" />
     Most wedding dresses take between one and four weeks of sewing to complete
     (or 40-160 hours), but circumstances rarely allow me to sew one
     dress, from start to finish, with no interruptions. Your wedding
@@ -225,7 +225,7 @@ location: not-linked
 <h3>Outside Appointments</h3>
 
 <p>
-    <img src="graphics/doorknocker.jpg" align="right" />
+    <img src="{{ site.baseimageref }}graphics/doorknocker.jpg" align="right" />
 
     <b>Long distance orders</b>
     <br />
