Moving Dressindepth image refs to S3.

--- a/dressindepth.html
+++ b/dressindepth.html
@@ -51,7 +51,7 @@ location: not-linked
 
 <p>
 
-    <img src="graphics/samplebooks.jpg" align="right" />
+    <img src="{{ site.baseimageref }}graphics/samplebooks.jpg" align="right" />
     I will advise on fabrics and materials at your consultation. I
     have
     sample books with hundreds of colours and types of fabrics to
@@ -86,7 +86,7 @@ location: not-linked
 <br />
 <h3>Designing continued...</h3>
 <p>
-    <img src="graphics/designprocess.jpg" align="right" />
+    <img src="{{ site.baseimageref }}graphics/designprocess.jpg" align="right" />
     If we are designing from scratch, any pictures or reference
     material
     you can bring with you to give me the ‘flavour’ of what
@@ -149,7 +149,7 @@ location: not-linked
 </p>
 
 <p>
-    <img src="graphics/sketches.jpg" align="left" />
+    <img src="{{ site.baseimageref }}graphics/sketches.jpg" align="left" />
 </p>
 
 <br />
@@ -187,7 +187,7 @@ location: not-linked
 </p>
 
 <p>
-    <img src="graphics/createpattern.jpg" align="left" />
+    <img src="{{ site.baseimageref }}graphics/createpattern.jpg" align="left" />
     <b>Measuring:</b>
     Every bespoke commission will have a pattern drafted especially
     to fit your figure. The first step is to take your measurements.
@@ -219,7 +219,7 @@ location: not-linked
 
 <p>
 
-    <img src="graphics/fitting.jpg" align="right" />
+    <img src="{{ site.baseimageref }}graphics/fitting.jpg" align="right" />
     <b>First Fitting: </b>
     You will need your shoes and the underwear you plan to wear on
     the day as early as possible in the fitting process. This is
