Improved correctness of HTML on landing page.

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@ location: home
 
 <div style="white-space: nowrap; overflow: hidden;">
     <img style="max-width: 20%;"
-         src="{{ site.baseimageref }}graphics/pic1b.jpg" /><img style="max-width: 20%;"
-         src="{{ site.baseimageref }}graphics/pic2b.jpg" /><img style="max-width: 20%;"
-         src="{{ site.baseimageref }}graphics/pic3b.jpg" /><img style="max-width: 20%;"
-         src="{{ site.baseimageref }}graphics/pic4b.jpg" /><img style="max-width: 20%;"
-         src="{{ site.baseimageref }}graphics/pic5b.jpg" />
+         src="{{ site.baseimageref }}graphics/pic1b.jpg" alt="Bespoke alterations"/><img style="max-width: 20%;"
+         src="{{ site.baseimageref }}graphics/pic2b.jpg" alt="Handmade bridesmaid dress"/><img style="max-width: 20%;"
+         src="{{ site.baseimageref }}graphics/pic3b.jpg" alt="A bespoke wedding dress"/><img style="max-width: 20%;"
+         src="{{ site.baseimageref }}graphics/pic4b.jpg" alt="A handmade bodice and skirt"/><img style="max-width: 20%;"
+         src="{{ site.baseimageref }}graphics/pic5b.jpg" alt="A bespoke wedding dress"/>
 </div>
 
 <div>
@@ -49,7 +49,7 @@ location: home
 
 <div class="section">
 
-    <img class="right" src="{{ site.baseimageref }}graphics/profile.jpg" alt="" />
+    <img class="right" src="{{ site.baseimageref }}graphics/profile.jpg" alt="The profile picture of Felicity Westmacott" />
 
     <div class="sectiontext">
         <h3>About Me</h3>
