Update FAQ page.

--- a/ordering.html
+++ b/ordering.html
@@ -12,18 +12,44 @@ location: ordering
     <div class="sectiontext">
         <h3>Are you available to make my dress?</h3>
         <p>
-            Enquiries for weddings in 2014 and 2015 are welcome, however
-            I am fully booked for wedding dates before August 2014.
+            Enquiries for weddings in 2015 and 2016 are welcome, however
+            I am fully booked for wedding dates before April 2015.
         </p>
-        <!--<p>-->
-            <!--A minimum budget of £1600 per wedding dress slot is required, -->
-            <!--most gowns cost between £1800 and £2600 with fabrics.-->
-        <!--</p>-->
     </div>
 </div>
 
 <div class="section">
-    <img class="right" src="{{ site.baseimageref }}graphics/pic1.jpg" />
+    <img class="right" src="{{ site.baseimageref }}graphics/pic3.jpg" />
+    <div class="sectiontext">
+        <h3>How much will it cost?</h3>
+        <p>
+            A minimum budget of £1850 per wedding dress slot is required,
+            most gowns cost between £2000 and £3000 with fabrics. Design 
+            elements that often increase the cost include layering, using lace,
+            embellishments and fuller skirted styles.
+        </p>
+        <p>
+            Consultation appointments are free.
+        </p>
+        <p>
+            Materials can be bought through me or purchased yourself and can be
+            chosen to suit your budget.	Fabrics typically comprise about 1/3 of the total cost.
+        </p>
+        <p>
+            Please note that <em>all the prices on this website are for guidance only</em>,
+            every commission differs depending on the work involved.
+            And though some dresses in my portfolio are shown with prices below £1850 I no
+            longer take wedding dress
+            commissions with total budgets below this threshold.
+        </p>
+        <p>
+            For guidance on typical 'terms and conditions' <a href="terms.html">click here</a>
+        </p>
+    </div>
+</div>
+
+<div class="section">
+    <img class="left" src="{{ site.baseimageref }}graphics/pic1.jpg" />
     <div class="sectiontext">
         <h3>How does my dress get designed and made?</h3>
         <p>
@@ -54,7 +80,7 @@ location: ordering
 </div>
 
 <div class="section">
-    <img class="left" src="{{ site.baseimageref }}graphics/pic2.jpg" />
+    <img class="right" src="{{ site.baseimageref }}graphics/pic2.jpg" />
     <div class="sectiontext">
         <h3>How long does it take? Can you accommodate rush orders?</h3>
         <p>
@@ -71,86 +97,6 @@ location: ordering
             schedule and your dress will be made in the time we have reserved
             for you. The actual time-scale is very flexible, we can spread the
             work over many months or begin and finish inside a few weeks.
-        </p>
-    </div>
-</div>
-
-<div class="section">
-    <img class="right" src="{{ site.baseimageref }}graphics/pic3.jpg" />
-    <div class="sectiontext">
-        <h3>How much will it cost?</h3>
-        <p>
-            A minimum budget of £1600 per wedding dress slot is required,
-            most gowns cost between £1800 and £2600 with fabrics.
-        </p>
-        <p>
-            Consultation appointments are free and we can discuss your ideal budget and then
-            design with that price in mind. The cost of each commission will
-            depend on the amount of work involved and the cost of the materials.
-            Design elements that often increase the cost include layering, using lace,
-            embellishments and fuller skirted styles.
-        </p>
-        <p>
-            Materials can be bought through me or purchased yourself and can be
-            chosen to suit your budget.	Fabrics typically comprise about 1/3 of the total cost.
-        </p>
-        <p>
-            Please note that <em>all the prices on this website are for guidance only</em>,
-            every commission differs depending on the work involved.
-            And though some dresses in my portfolio are shown with prices below £1600 I no
-            longer take wedding dress
-            commissions with total budgets below this threshold.
-        </p>
-        <p>
-            Bridesmaids dresses from the high street will
-            always be cheaper than having each dress made bespoke by me,
-            I do not compete on price with dresses made in bulk in the Far East!
-            But you can be sure of the perfect colour, style and fit for each bridesmaid when you
-            choose my services.
-        </p>
-
-        <p>
-            Price guide for typical bespoke orders, labour + fabrics
-          <ul>
-            <li>
-                Wedding dresses
-                <br /> &#160; &#160; &#160;
-                from £1600 to £6000, typical £1800-£2600
-            </li>
-            <li>
-                Adult Bridesmaids/evening/prom
-                <br /> &#160; &#160; &#160;
-                from £400, typical £550
-            </li>
-            <li>
-                Mother of the bride/Ascot dress
-                <br /> &#160; &#160; &#160;
-                from £450, typical £800
-            </li>
-            <li>
-                Boleros
-                <br /> &#160; &#160; &#160;
-                from £120, typical £200
-            </li>
-            <li>
-                Waistcoats
-                <br /> &#160; &#160; &#160;
-                from £120, typical £200
-            </li>
-            <li>
-                Cravat or tie and hankie set
-                <br /> &#160; &#160; &#160;
-                usually £40
-            </li>
-            <li>
-                Children’s bridesmaid dress
-                <br /> &#160; &#160; &#160;
-                from £300, typical £375
-            </li>
-          </ul>
-        </p>
-        <p>
-            For guidance on typical 'terms and conditions' <a href="terms.html">click here</a>
         </p>
     </div>
 </div>
@@ -175,11 +121,12 @@ location: ordering
         <p>
             Example costs
         <ul>
-            <li>Hems from £25 per layer</li>
-            <li>Take-in at bust/waist/hip from £25</li>
-            <li>Bustle hook-up for train £5</li>
-            <li>Create lace-up back on dress or bodice from £60</li>
+            <li>Hems from £35 per layer</li>
+            <li>Take-in at bust/waist/hip from £35</li>
+            <li>Bustle hook-up for train £10</li>
+            <li>Create lace-up back on dress or bodice from £75</li>
         </ul>
+        
         </p>
     </div>
 </div>
