--- a/portfolio/wildbmaid1.html
+++ b/portfolio/wildbmaid1.html
@@ -7,9 +7,36 @@ nextpic: wildbmaid2
 counter: 1 / 14
 ---
 
+
+<b>
+Bridesmaids dresses for Lauren Wild
+</b>
+
+<p>
+  <b>
+    Similar styles from £460
+  </b>
+  <br />
+  <i>
+    With materials and detailing as shown £630
+  </i>
+</p>
+
+<p>
+Lauren commissioned four bridesmaids dresses, two in each style, to flatter their different statures and match perfectly with her own dress.
+</p>
+
+<p>
+  <i>
+    Official photographs by <a href="http://www.bumbleandbrown.com/" target="_blank">Bumble and Brown</a>
+  </i>
+</p>
+
+<hr />
+
 <p>
 Lauren's bridesmaids wore the same pale ivory matt satin but cut in a very simple, classic style. Princess line with high boat-necklines skimmed their figures and flowed into simple a-line skirts. At the back all the dresses and tiny puddle trains, edged with the same lace trim as the brides dress. Two of the dresses were finished at the back with buttons and the other two with soft cowls.
-</>
+</p>
 <p>
 To see more pictures and details of the brides dress 
  <a href="portfolio/wild1.html">Click here</a> 
