--- a/portfolio/wildbmaid3.html
+++ b/portfolio/wildbmaid3.html
@@ -7,5 +7,34 @@ prevpic: wildbmaid2
 counter: 3 / 14
 ---
 
-Original design sketches for the bridesmaids' dresses with the two different back options
+
+<b>
+Bridesmaids dresses for Lauren Wild
+</b>
+
+<p>
+  <b>
+    Similar styles from £460
+  </b>
+  <br />
+  <i>
+    With materials and detailing as shown £630
+  </i>
+</p>
+
+<p>
+Lauren commissioned four bridesmaids dresses, two in each style, to flatter their different statures and match perfectly with her own dress.
+</p>
+
+<p>
+  <i>
+    Official photographs by <a href="http://www.bumbleandbrown.com/" target="_blank">Bumble and Brown</a>
+  </i>
+</p>
+
+<hr />
+
+<p>
+  Original design sketches for the bridesmaids' dresses with the two different back options
+</p>
 
