--- a/portfolio/wildbmaid4.html
+++ b/portfolio/wildbmaid4.html
@@ -7,5 +7,36 @@ prevpic: wildbmaid3
 counter: 4 / 14
 ---
 
+
+<b>
+Bridesmaids dresses for Lauren Wild
+</b>
+
+<p>
+  <b>
+    Similar styles from £460
+  </b>
+  <br />
+  <i>
+    With materials and detailing as shown £630
+  </i>
+</p>
+
+<p>
+Lauren commissioned four bridesmaids dresses, two in each style, to flatter their different statures and match perfectly with her own dress.
+</p>
+
+<p>
+  <i>
+    Official photographs by <a href="http://www.bumbleandbrown.com/" target="_blank">Bumble and Brown</a>
+  </i>
+</p>
+
+
+
+<hr />
+
+<p>
 Sisterly love: showing the bride with her head bridesmaid, Gemma, who's dress was finished with a cowl back.
+</p>
 
