--- a/portfolio/wildbmaid7.html
+++ b/portfolio/wildbmaid7.html
@@ -7,5 +7,29 @@ prevpic: wildbmaid6
 counter: 7 / 14
 ---
 
+
+
+<b>
+Bridesmaids dresses for Lauren Wild
+</b>
+
+<p>
+  <b>
+    Similar styles from £460
+  </b>
+  <br />
+  <i>
+    With materials and detailing as shown £630
+  </i>
+</p>
+
+<p>
+Lauren commissioned four bridesmaids dresses, two in each style, to flatter their different statures and match perfectly with her own dress.
+</p>
+
+<hr />
+
+<p>
 The tiny demi-trains were hand appliquéd with lace edging
+</p>
 
