--- a/portfolio/wildbmaid10.html
+++ b/portfolio/wildbmaid10.html
@@ -7,5 +7,28 @@ prevpic: wildbmaid9
 counter: 10 / 14
 ---
 
-One of the finished dresses on the stand, with a button back (sewn next to concealed zip). The train is shown spread out and hooked up for dancing.
 
+<b>
+Bridesmaids dresses for Lauren Wild
+</b>
+
+<p>
+  <b>
+    Similar styles from £460
+  </b>
+  <br />
+  <i>
+    With materials and detailing as shown £630
+  </i>
+</p>
+
+<p>
+Lauren commissioned four bridesmaids dresses, two in each style, to flatter their different statures and match perfectly with her own dress.
+</p>
+
+
+<hr />
+
+<p>
+One of the finished dresses on the stand, with a button back (sewn next to concealed zip). The train is shown spread out and hooked up for dancing.
+</p>
