--- a/portfolio/wildbmaid11.html
+++ b/portfolio/wildbmaid11.html
@@ -7,5 +7,29 @@ prevpic: wildbmaid10
 counter: 11 / 14
 ---
 
+
+<b>
+Bridesmaids dresses for Lauren Wild
+</b>
+
+<p>
+  <b>
+    Similar styles from £460
+  </b>
+  <br />
+  <i>
+    With materials and detailing as shown £630
+  </i>
+</p>
+
+<p>
+Lauren commissioned four bridesmaids dresses, two in each style, to flatter their different statures and match perfectly with her own dress.
+</p>
+
+
+<hr />
+
+<p>
 The other style of dress, finished and on the stand with softly draped cowl back.
+</p>
 
