--- a/portfolio/wildbmaid13.html
+++ b/portfolio/wildbmaid13.html
@@ -7,5 +7,35 @@ prevpic: wildbmaid12
 counter: 13 / 14
 ---
 
-Showing that the dresses inhibited no-ones grooves!
 
+<b>
+Bridesmaids dresses for Lauren Wild
+</b>
+
+<p>
+  <b>
+    Similar styles from £460
+  </b>
+  <br />
+  <i>
+    With materials and detailing as shown £630
+  </i>
+</p>
+
+<p>
+Lauren commissioned four bridesmaids dresses, two in each style, to flatter their different statures and match perfectly with her own dress.
+</p>
+
+<p>
+  <i>
+    Official photographs by <a href="http://www.bumbleandbrown.com/" target="_blank">Bumble and Brown</a>
+  </i>
+</p>
+
+
+
+<hr />
+
+<p>
+Showing that the dresses inhibited no-ones grooves!
+</p>
