--- a/portfolio/wildbmaid14.html
+++ b/portfolio/wildbmaid14.html
@@ -9,3 +9,29 @@ counter: 14 / 14
 
 
 
+<b>
+Bridesmaids dresses for Lauren Wild
+</b>
+
+<p>
+  <b>
+    Similar styles from £460
+  </b>
+  <br />
+  <i>
+    With materials and detailing as shown £630
+  </i>
+</p>
+
+<p>
+Lauren commissioned four bridesmaids dresses, two in each style, to flatter their different statures and match perfectly with her own dress.
+</p>
+
+<p>
+  <i>
+    Official photographs by <a href="http://www.bumbleandbrown.com/" target="_blank">Bumble and Brown</a>
+  </i>
+</p>
+
+
+
