Adding wedding industry awards logo.

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -18,7 +18,6 @@ location: gallery
 
 </div>
 
-
 <div class="under">
   <div class="filter">
     Show:
@@ -34,4 +33,8 @@ location: gallery
 
     </select>
   </div>
+</div>
+
+<div >
+    <img src="http://www.the-wedding-industry-awards.co.uk/downloads/twia_11.0.jpg"/>
 </div>
