Adding link to wedding industry awards.

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -33,6 +33,10 @@ location: gallery
 
     </select>
   </div>
+  
+  <a href="http://www.the-wedding-industry-awards.co.uk/">
       <img src="http://www.the-wedding-industry-awards.co.uk/downloads/twia_11.0.jpg"/>
+  </a>
+      
 </div>
 
