--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -34,7 +34,7 @@ location: gallery
     </select>
   </div>
   
-  <a href="http://www.the-wedding-industry-awards.co.uk/">
+  <a href="http://www.the-wedding-industry-awards.co.uk/" target="_blank">
       <img src="http://www.the-wedding-industry-awards.co.uk/downloads/twia_11.0.jpg"/>
   </a>
       
