Adding wedding industry awards logo.

--- a/index.html
+++ b/index.html
@@ -85,3 +85,9 @@ location: home
     </div>
 </div>
 
+<div style="text-align: center">
+    <a href="http://www.the-wedding-industry-awards.co.uk/" target="_blank">
+        <img src="http://www.the-wedding-industry-awards.co.uk/downloads/twia_11.0.jpg"/>
+    </a>
+</div>
+
