--- a/portfolio/joseph7.html
+++ b/portfolio/joseph7.html
@@ -21,6 +21,8 @@ Wedding dress and veil for Harriet
 
 
 </p>
-
+<p>
+Photography by <a href="http://www.barryholder.co.uk/">Barry Holder</a>
+</p>
 
 <hr />  
