--- a/portfolio/joseph1.html
+++ b/portfolio/joseph1.html
@@ -9,5 +9,8 @@ counter: 1 / 16
 <p>
   A boned bodice with sweetheart neckline covered with delicate French Chantilly lace . The lace layer has a boat neckline and elbow length sleeves. The a-line skirt is layered satin and silk organza with a small train and slate grey silk-satin sash
   </p>
+  <p>
+Photography by <a href="http://www.barryholder.co.uk/">Barry Holder</a>
+</p>
 
 <hr/>
