--- a/portfolio/joseph4.html
+++ b/portfolio/joseph4.html
@@ -22,7 +22,9 @@ Wedding dress and veil for Harriet
 
 
 </p>
-
+<p>
+Photography by <a href="http://www.barryholder.co.uk/">Barry Holder</a>
+</p>
 
 <hr />  
 
