--- a/portfolio/joseph6.html
+++ b/portfolio/joseph6.html
@@ -1,27 +1,25 @@
 ---
-
 layout: client
 title: Wedding dress for Harriet
 image: joseph6.jpg
 nextpic: joseph7
 prevpic: joseph5
 counter: 6 / 16
-
 ---
 
-
 <b>
-Wedding dress and veil for Harriet 
+Wedding dress and veil for Harriet
 </b>
 
 
 <p>
-  A boned bodice with sweetheart neckline covered with delicate French Chantilly lace . The lace layer has a boat neckline and elbow length sleeves. The a-line skirt is layered satin and silk organza with a small train and slate grey silk-satin sash.
-
-
+  A boned bodice with sweetheart neckline covered with delicate French Chantilly lace. The lace 
+  layer has a boat neckline and elbow length sleeves. The a-line skirt is layered satin and silk 
+  organza with a small train and slate grey silk-satin sash.
 </p>
+
 <p>
-Photography by <a href="http://www.barryholder.co.uk/">Barry Holder</a>
+  Photography by <a href="http://www.barryholder.co.uk/">Barry Holder</a>
 </p>
 
 <hr />  
