--- a/portfolio/joseph9.html
+++ b/portfolio/joseph9.html
@@ -2,8 +2,8 @@
 layout: client
 title: Wedding Dress for Harriet
 image: joseph9.jpg
-nextpic: 10
-prevpic: 8
+nextpic: joseph10
+prevpic: joseph8
 counter: 9 / 16
 ---
 
