Correcting next prev confusion.

--- a/portfolio/joseph10.html
+++ b/portfolio/joseph10.html
@@ -2,8 +2,8 @@
 layout: client
 title: Wedding Dress for Harriet
 image: joseph10.jpg
-nextpic: 11
-prevpic: 9
+nextpic: joseph11
+prevpic: joseph9
 counter: 10 / 16
 ---
 
