--- a/portfolio/joseph11.html
+++ b/portfolio/joseph11.html
@@ -2,8 +2,8 @@
 layout: client
 title: Wedding Dress for Harriet
 image: joseph11.jpg
-nextpic: 12
-prevpic: 10
+nextpic: joseph12
+prevpic: joseph10
 counter: 11 / 16
 ---
 
