--- a/portfolio/joseph12.html
+++ b/portfolio/joseph12.html
@@ -2,8 +2,8 @@
 layout: client
 title: Wedding Dress for Harriet
 image: joseph12.jpg
-nextpic: 13
-prevpic: 11
+nextpic: joseph13
+prevpic: joseph11
 counter: 12 / 16
 ---
 
