--- a/portfolio/joseph13.html
+++ b/portfolio/joseph13.html
@@ -2,8 +2,8 @@
 layout: client
 title: Wedding Dress for Harriet
 image: joseph13.jpg
-nextpic: 14
-prevpic: 12
+nextpic: joseph14
+prevpic: joseph12
 counter: 13 / 16
 ---
 
