--- a/portfolio/joseph14.html
+++ b/portfolio/joseph14.html
@@ -2,8 +2,8 @@
 layout: client
 title: Wedding Dress for Harriet
 image: joseph14.jpg
-nextpic: 15
-prevpic: 13
+nextpic: joseph15
+prevpic: joseph13
 counter: 14 / 16
 ---
 
