--- a/portfolio/joseph15.html
+++ b/portfolio/joseph15.html
@@ -2,8 +2,8 @@
 layout: client
 title: Wedding Dress for Harriet
 image: joseph15.jpg
-nextpic: 16
-prevpic: 14
+nextpic: joseph16
+prevpic: joseph14
 counter: 15 / 16
 ---
 
