Update and rename allen10 to allen10.html

--- a/portfolio/allen10.html
+++ b/portfolio/allen10.html
@@ -2,8 +2,8 @@
 layout: client
 title: Wedding Dress for Liz
 image: allen10.jpg
-nextpic: 11
-prevpic: 9
+nextpic: allen11
+prevpic: allen9
 counter: 10 / 16
 ---
 
