--- a/portfolio/allen2.html
+++ b/portfolio/allen2.html
@@ -2,8 +2,8 @@
 layout: client
 title: Wedding Dress for Liz
 image: allen2.jpg
-nextpic: 3
-prevpic: 1
+nextpic: allen3
+prevpic: allen1
 counter: 2 / 16
 ---
 
