--- a/portfolio/allen3.html
+++ b/portfolio/allen3.html
@@ -2,8 +2,8 @@
 layout: client
 title: Wedding Dress for Liz
 image: allen3.jpg
-nextpic: 4
-prevpic: 2
+nextpic: allen4
+prevpic: allen2
 counter: 3 / 16
 ---
 
