--- a/portfolio/allen4.html
+++ b/portfolio/allen4.html
@@ -2,8 +2,8 @@
 layout: client
 title: Wedding Dress for Liz
 image: allen4.jpg
-nextpic: 5
-prevpic: 3
+nextpic: allen5
+prevpic: allen3
 counter: 4 / 16
 ---
 
