--- a/portfolio/allen5.html
+++ b/portfolio/allen5.html
@@ -2,8 +2,8 @@
 layout: client
 title: Wedding Dress for Liz
 image: allen5.jpg
-nextpic: 6
-prevpic: 4
+nextpic: allen6
+prevpic: allen4
 counter: 5 / 16
 ---
 
