--- a/portfolio/allen6.html
+++ b/portfolio/allen6.html
@@ -2,8 +2,8 @@
 layout: client
 title: Wedding Dress for Liz
 image: allen6.jpg
-nextpic: 7
-prevpic: 5
+nextpic: allen7
+prevpic: allen5
 counter: 6 / 16
 ---
 
