--- a/portfolio/allen7.html
+++ b/portfolio/allen7.html
@@ -2,8 +2,8 @@
 layout: client
 title: Wedding Dress for Liz
 image: allen7.jpg
-nextpic: 8
-prevpic: 6
+nextpic: allen8
+prevpic: allen6
 counter: 7 / 16
 ---
 
