--- a/portfolio/allen8.html
+++ b/portfolio/allen8.html
@@ -2,8 +2,8 @@
 layout: client
 title: Wedding Dress for Liz
 image: allen8.jpg
-nextpic: 9
-prevpic: 7
+nextpic: allen9
+prevpic: allen7
 counter: 8 / 16
 ---
 
