--- a/portfolio/allen9.html
+++ b/portfolio/allen9.html
@@ -2,8 +2,8 @@
 layout: client
 title: Wedding Dress for Liz
 image: allen9.jpg
-nextpic: 10
-prevpic: 8
+nextpic: allen10
+prevpic: allen8
 counter: 9 / 16
 ---
 
