--- a/portfolio/harris10.html
+++ b/portfolio/harris10.html
@@ -2,8 +2,8 @@
 layout: client
 title: Wedding Dress for Isabella
 image: harris10.jpg
-nextpic: 11
-prevpic: 9
+nextpic: harris11
+prevpic: harris9
 counter: 10 / 15
 ---
 
