--- a/portfolio/harris11.html
+++ b/portfolio/harris11.html
@@ -2,8 +2,8 @@
 layout: client
 title: Wedding Dress for Isabella
 image: harris11.jpg
-nextpic: 12
-prevpic: 10
+nextpic: harris12
+prevpic: harris10
 counter: 11 / 15
 ---
 
