--- a/portfolio/harris12.html
+++ b/portfolio/harris12.html
@@ -2,8 +2,8 @@
 layout: client
 title: Wedding Dress for Isabella
 image: harris12.jpg
-nextpic: 13
-prevpic: 11
+nextpic: harris13
+prevpic: harris11
 counter: 12 / 15
 ---
 
