--- a/portfolio/harris13.html
+++ b/portfolio/harris13.html
@@ -2,8 +2,8 @@
 layout: client
 title: Wedding Dress for Isabella
 image: harris13.jpg
-nextpic: 14
-prevpic: 12
+nextpic: harris14
+prevpic: harris12
 counter: 13 / 15
 ---
 
