--- a/portfolio/harris14.html
+++ b/portfolio/harris14.html
@@ -2,8 +2,8 @@
 layout: client
 title: Wedding Dress for Isabella
 image: harris14.jpg
-nextpic: 15
-prevpic: 13
+nextpic: harris15
+prevpic: harris13
 counter: 14 / 15
 ---
 
