--- a/portfolio/harris2.html
+++ b/portfolio/harris2.html
@@ -2,8 +2,8 @@
 layout: client
 title: Wedding Dress for Isabella
 image: harris2.jpg
-nextpic: 3
-prevpic: 1
+nextpic: harris3
+prevpic: harris1
 counter: 2 / 15
 ---
 <p>
