--- a/portfolio/harris3.html
+++ b/portfolio/harris3.html
@@ -2,8 +2,8 @@
 layout: client
 title: Wedding Dress for Isabella
 image: harris3.jpg
-nextpic: 4
-prevpic: 2
+nextpic: harris4
+prevpic: harris2
 counter: 3 / 15
 ---
 <p>
