--- a/portfolio/harris4.html
+++ b/portfolio/harris4.html
@@ -2,8 +2,8 @@
 layout: client
 title: Wedding Dress for Isabella
 image: harris4.jpg
-nextpic: 5
-prevpic: 3
+nextpic: harris5
+prevpic: harris3
 counter: 4 / 15
 ---
 <p>
