--- a/portfolio/harris5.html
+++ b/portfolio/harris5.html
@@ -2,8 +2,8 @@
 layout: client
 title: Wedding Dress for Isabella
 image: harris5.jpg
-nextpic: 6
-prevpic: 4
+nextpic: harris6
+prevpic: harris4
 counter: 5 / 15
 ---
 <p>
