--- a/portfolio/harris7.html
+++ b/portfolio/harris7.html
@@ -2,8 +2,8 @@
 layout: client
 title: Wedding Dress for Isabella
 image: harris7.jpg
-nextpic: 8
-prevpic: 6
+nextpic: harris8
+prevpic: harris6
 counter: 7 / 15
 ---
 
