--- a/portfolio/harris8.html
+++ b/portfolio/harris8.html
@@ -2,8 +2,8 @@
 layout: client
 title: Wedding Dress for Isabella
 image: harris8.jpg
-nextpic: 9
-prevpic: 7
+nextpic: harris9
+prevpic: harris7
 counter: 8 / 15
 ---
 
