--- a/portfolio/harris6.html
+++ b/portfolio/harris6.html
@@ -2,8 +2,8 @@
 layout: client
 title: Wedding Dress for Isabella
 image: harris6.jpg
-nextpic: 7
-prevpic: 5
+nextpic: harris7
+prevpic: harris5
 counter: 6 / 15
 ---
 
