--- a/portfolio/harris9.html
+++ b/portfolio/harris9.html
@@ -2,8 +2,8 @@
 layout: client
 title: Wedding Dress for Isabella
 image: harris9.jpg
-nextpic: 10
-prevpic: 8
+nextpic: harris10
+prevpic: harris8
 counter: 9 / 15
 ---
 
