--- a/portfolio/allen11.html
+++ b/portfolio/allen11.html
@@ -2,8 +2,8 @@
 layout: client
 title: Wedding Dress for Liz
 image: allen11.jpg
-nextpic: allen12.jpg
-prevpic: allen10.jpg
+nextpic: allen12
+prevpic: allen10
 counter: 11 / 16
 ---
 
